# email-triage-env

./: .env  .gitignore  Dockerfile  README.md  __main__.py  baseline.py  email_env.py  environment.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py  test_openenv.py  test_space.py
environment/: email_env.py  graders.py  models.py  tasks.py
server/: __init__.py  app.py
