[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-agent"
version = "1.0.0"
description = "Email Triage Environment for AI agents"
dependencies = [
    "fastapi",
    "uvicorn", 
    "openai",
    "requests",
    "openenv-core"
]

[project.scripts]
email-triage-agent = "server.app:main"
